--- a/home.html
+++ b/home.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
  <head>
- <title>awesome title</title>
+ <title>awesome title2</title>
  </head>
 <body>
 <p>hello world</p>
